Updated banner appearance.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <div id="main">
     <video id="video" width="1920" height="1080" muted="muted"></video>
     <div id="banner">
-      LOCAL PLAYBACK
+      Welcome to Senza
     </div>
   </div>
 </body>
