Audio and subtitle language selection demo

--- a/index.html
+++ b/index.html
@@ -9,9 +9,7 @@
 <body>
   <div id="main">
     <video id="video" width="1920" height="1080" muted="muted"></video>
-    <div id="banner">
-      Welcome to Senza
-    </div>
+    <div id="banner">audio: en<br>text: en</div>
   </div>
 </body>
 <script type="text/javascript" src="./dist/bundle.js"></script>
